--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^15.1.7",
     "openai": "^6.24.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
